# MAMA-SYNTH-codebase

./: .gitignore
mama-synth/mama-synth-eval/: .dockerignore  .gitignore  Dockerfile  PDF_ANALYSIS.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
mama-synth/mama-synth-eval/.github/workflows/: ci.yml
mama-synth/mama-synth-eval/src/eval/: __init__.py  __main__.py  classification.py  evaluation.py  extract_slices.py  frd.py  generate_test_data.py  metrics.py  mirror_utils.py  ranking.py  roi_utils.py  segmentation.py  slice_extraction.py  synthesize.py  train_classifier.py  train_cnn_classifier.py  training_visualization.py  visualization.py  webapp.py
mama-synth/mama-synth-eval/src/mama_sia_eval/: __init__.py  __main__.py  evaluation.py  metrics.py  ranking.py  segmentation.py  slice_extraction.py  train_classifier.py  training_visualization.py  visualization.py
mama-synth/mama-synth-eval/tests/: conftest.py  test_classification.py  test_e2e.py  test_evaluation.py  test_frd.py  test_metrics.py  test_mirror_utils.py  test_ranking.py  test_roi_utils.py  test_segmentation.py  test_slice_extraction.py  test_synthesize.py  test_train_classifier.py  test_train_cnn_classifier.py  test_training_visualization.py  test_tumor_roi_integration.py  test_v070_features.py  test_v080_features.py  test_v090_features.py
mama-synth/mama-synth-gc-eval/: Dockerfile  evaluate.py  requirements.txt
mama-synth/mama-synth-gc-eval/evaluators/: __init__.py  base.py  classification.py  image_metrics.py  roi_metrics.py  segmentation.py
mama-synth/mama-synth-gc-eval/tests/: test_evaluators.py
